--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@telegram-apps/sdk-react": "^3.3.9",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "firebase": "^12.6.0",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
